--- a/_config.yml
+++ b/_config.yml
@@ -63,11 +63,11 @@ google_ad_slot           :
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Matthew J Newsome"
   avatar           : "bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Consulting services and field engineering at its finest!"
+  location         : "Where you need it"
+  email            : "newsome.matt79@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
