--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Matthew J Newsome"
 title_separator          : "-"
 name                     : "Matt Newsome"
 description              : "Accomplishments and resume"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://newsomematt79.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 gh_repo                  :
 teaser                   : # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
